--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HistoryList" />
-        <activity android:name=".ServiceActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.DBactivity"></activity>
+        <activity android:name=".view.HistoryList" />
+        <activity android:name=".view.ServiceActivity" />
+        <activity android:name=".view.SettingsActivity" />
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".CounterService" android:enabled="true"/>
+
+        <service
+            android:name=".viewmodel.CounterService"
+            android:enabled="true" />
     </application>
 
 </manifest>
