--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.DBactivity"></activity>
+        <activity android:name=".view.AnimationActivity"></activity>
+        <activity android:name=".view.DBactivity" />
         <activity android:name=".view.HistoryList" />
         <activity android:name=".view.ServiceActivity" />
         <activity android:name=".view.SettingsActivity" />
